feat: B站视频下载与字幕翻译工具
Co-authored-by: traeagent <traeagent@users.noreply.github.com>